[package]
name = "restparted"
version = "0.1.0"
edition = "2021"
authors = ["Bùi Gia Viện <shadichy@blisslabs.org>"]

[dependencies]
actix-http = {version = "3.9.0",features = ["http2","rustls-0_23"]}
actix-rt = "2.10.0"
actix-server = "2.5.0"
actix-service = "2.0.2"
actix-tls = { version = "3.4", features = ["rustls-0_23-webpki-roots", "rustls-0_23"] }
actix-utils = "3.0.1"
bytes = "1.9.0"
# derive_more = { version = "1", features = ["as_ref", "deref", "deref_mut", "display", "error", "from"] }
env_logger = "0.11.5"
futures-core = { version = "0.3.17", default-features = false, features = ["alloc"] }
futures-util = "0.3.31"
http = "1.2.0"
rcgen = "0.13.1"
regex = "1.11.1"
rustls = "0.23.20"
rustls-pemfile = "2.2.0"
serde_json = "1.0.133"
tracing = "0.1.41"
webpki-roots = "0.26.7"

[dev-dependencies]

[features]
default = []

# Internal (PRIVATE!) features used to aid checking feature status.
# Don't rely on these whatsoever. They may disappear at anytime.
__tls = []

# HTTP/2 support (including h2c).
http2 = ["actix-http/http2"]

# TLS via Rustls v0.23
rustls-0_23 = ["__tls", "http2", "actix-http/rustls-0_23", "actix-tls/accept", "actix-tls/rustls-0_23"]
